--- a/paper.bib
+++ b/paper.bib
@@ -11,20 +11,20 @@
 }
 
 @software{Panoply,
-  author = {NASA Goddard Institute for Space Studies}
-  title = {Panoply Data Viewer}
-  year = {2023}
-  date = {2023-09-22}
-  version = {5.2.9}
+  author = {NASA Goddard Institute for Space Studies},
+  title = {Panoply Data Viewer},
+  year = {2023},
+  date = {2023-09-22},
+  version = {5.2.9},
   url = {https://www.giss.nasa.gov/tools/panoply/}
 }
 
 @software{Ncview,
-  author = {David W. Pierce}
-  title = {Ncview}
-  year = {2021}
-  date = {2023-09-22}
-  version = {2.1.9}
+  author = {David W. Pierce},
+  title = {Ncview},
+  year = {2021},
+  date = {2023-09-22},
+  version = {2.1.9},
   url = {https://cirrus.ucsd.edu/ncview/}
 }
 
