--- a/paper.bib
+++ b/paper.bib
@@ -1,7 +1,28 @@
+@article{Gutjahr:2022,
+  author = {Gutjahr, Oliver and Jungclaus, J. and Brüggemann, N. and Haak, Helmuth and Marotzke, J.},
+  year = {2022},
+  month = {04},
+  pages = {e2021JC018075},
+  title = {Air‐Sea Interactions and Water Mass Transformation During a Katabatic Storm in the Irminger Sea},
+  volume = {127},
+  journal = {Journal of Geophysical Research: Oceans},
+  doi = {10.1029/2021JC018075}
+}
+
+@article{Sivkov:2021,
+  author = {Sivkov, V. and Bubnova, E.},
+  title = {Distribution of suspended particulate matter at the equatorial transect in the Atlantic Ocean},
+  journal = {Ocean Science},
+  volume = {17},
+  number = {5},
+  pages = {1421--1435},
+  url = {https://os.copernicus.org/articles/17/1421/2021/},
+  doi = {10.5194/os-17-1421-2021}
+}
+
 @software{ncvue,
   author = {Matthias Cuntz},
-  title = {{ncvue: a minimal GUI for a quick view of netcdf
-                   files}},
+  title = {{ncvue: a minimal GUI for a quick view of netcdf files}},
   month = oct,
   year = 2021,
   publisher = {Zenodo},
@@ -38,14 +59,14 @@
   url          = {odv.awi.de}
 }
 
-@Manual{GRASS_GIS_software,
-    title = {Geographic Resources Analysis Support System (GRASS GIS) Software, Version 8.2},
-    author = {{GRASS Development Team}},
-    organization = {Open Source Geospatial Foundation},
-    address = {USA},
-    year = {2022},
-    url = {https://grass.osgeo.org},
-    doi = {10.5281/zenodo.5176030}
+@Manual{GRASS_GIS,
+  title = {Geographic Resources Analysis Support System (GRASS GIS) Software, Version 8.2},
+  author = {{GRASS Development Team}},
+  organization = {Open Source Geospatial Foundation},
+  address = {USA},
+  year = {2022},
+  url = {https://grass.osgeo.org},
+  doi = {10.5281/zenodo.5176030}
 }
 
 @software{transectizer,
@@ -60,7 +81,7 @@
   url          = {https://doi.org/10.5281/zenodo.10199}
 }
 
-@software{qgis_contributors_2022_5869838,
+@software{qgis,
   author       = {QGIS Contributors},
   title        = {QGIS},
   month        = jan,
