Include link to notebook in docs

--- a/docs/source/_media/NcCut_Example.ipynb
+++ b/docs/source/_media/NcCut_Example.ipynb
@@ -5,7 +5,9 @@
    "id": "75f9cd7c-8ca9-4342-9b85-7547bb1da43a",
    "metadata": {},
    "source": [
-    "# Working with Output Data Example"
+    "# Working with Output Data Example\n",
+    "\n",
+    "You can access the original notebook [here](https://github.com/rchartra/NcCut/blob/master/docs/source/_media/NcCut_Example.ipynb)"
    ]
   },
   {
